--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: inherit;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.View {
+  border: 2px solid black;
+  margin: 5%;
+  width: 80%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.eventCard {
+  border: 2px solid black;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  flex-basis: 100%;
+  flex: 1;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.dateBox {
+  border-right: 2px solid black;
+  flex: 1;
+  padding-left: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.detailsBox {
+  flex: 3;
+  padding-left: 5px;
+}
+
+.viewEventBtn {
+  align-self: left;
+  padding-left: 5px;
+  margin: 5px;
 }
