filter changes state

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,9 @@
   border: 2px solid black;
   width: 50%;
 }
+
+.advanced-search-box {
+  margin: 10px;
+  border: 2px solid black; 
+  width: 50%;
+}
